JAVACLIENT-244: Build with java 11